# safeguard_rag

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
airflow/: __init__.py
airflow/dags/: __init__.py  ingest_dag.py  transform_dag.py
configs/: default.yaml  retrieval_templates.yaml
dbt/: dbt_project.yml
dbt/models/marts/: dim_actions.sql  dim_entities.sql  dim_models.sql  fct_signals.sql  schema.yml
dbt/models/staging/: stg_enforcement.sql  stg_signals.sql
safeguards_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: __init__.py  charts.py
src/ingestion/: __init__.py  dead_letter.py  schemas.py  synthetic.py
src/ingestion/loaders/: __init__.py  classifier.py  enforcement.py  model_outputs.py  reports.py
src/pipeline/: __init__.py  graph.py  retry.py  state.py
src/pipeline/nodes/: __init__.py  retrieval_keyword.py  retrieval_sql.py  retrieval_vector.py  router.py  scorer.py  synthesiser.py
src/quality/: __init__.py  alerting.py  expectations.py  freshness.py
src/retrieval/: __init__.py  embedding.py  template_registry.py  vector_store.py
src/retrieval/templates/: classifier_precision.sql  enforcement_rate.sql  report_volume.sql
tests/: __init__.py
tests/dbt/: __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_retry.py  test_router.py  test_schemas.py
